# docli

./: .gitignore  PYTHON_COMPANION_TO_DOCLI.md  docli-spec.md
docli/: Cargo.toml
docli-cli/: Cargo.toml
docli-cli/src/: main.rs
docli-cli/src/commands/: diff.rs  doctor.rs  edit.rs  envelope.rs  extract.rs  inspect.rs  kb.rs  mod.rs  ooxml.rs  read.rs  review.rs  run.rs  schema.rs  validate.rs
docli-cli/tests/: edit_roundtrip.rs  review_roundtrip.rs
docli-cli/tests/helpers/: mod.rs
docli-companion/: pyproject.toml
docli-companion/src/docli_companion/: __init__.py  batch.py  models.py  propose_fix.py  report.py  runner.py  schema.py
docli-companion/src/docli_companion/checks/: __init__.py  policy.py  structural.py
docli-companion/tests/: test_batch.py  test_models.py  test_policy.py  test_propose_fix.py  test_report.py  test_runner.py  test_schema.py  test_structural.py
docli-core/: Cargo.toml
docli-core/src/: envelope.rs  error.rs  job.rs  lib.rs  package.rs  units.rs
docli-create/: Cargo.toml
docli-create/src/: backend.rs  docx_rs_backend.rs  lib.rs  spec.rs
docli-kb/: Cargo 2.toml  Cargo.toml
docli-kb/src/: lib.rs  resolver.rs  rules.rs  template.rs
docli-patch/: Cargo.toml
docli-patch/src/: comments.rs  id_alloc.rs  lib.rs  normalize.rs  relationships.rs  runs 2.rs  tracked_changes.rs
docli-patch/src/ops/: delete.rs  mod.rs  replace_text.rs
docli-query/: Cargo.toml
docli-query/src/: hash.rs  index.rs  lib.rs  selector.rs  story.rs
docli-render/: Cargo.toml
docli-render/src/: diff.rs  lib.rs  poppler.rs  soffice.rs
docli-schema/: Cargo 2.toml  Cargo.toml
docli-schema/src/: invariants.rs  lib.rs  redline.rs  repair.rs  structural.rs
docli/docli-cli/: Cargo.toml
docli/docli-cli/src/: envelope.rs  main.rs
docli/docli-cli/src/commands/: convert.rs  create.rs  doctor.rs  edit.rs  finalize.rs  inspect.rs  merge.rs  mod.rs  read.rs  run.rs  template.rs  validate.rs
docli/docli-cli/tests/: inspect.rs  validate.rs
docli/docli-core/: Cargo.toml
docli/docli-core/src/: commit.rs  envelope.rs  job.rs  journal.rs  package.rs  pipeline.rs
docli/docli-create/: Cargo.toml
docli/docli-kb/: Cargo.toml
docli/docli-kb/src/: lib.rs  template.rs
docli/docli-patch/: Cargo.toml
docli/docli-patch/src/: images.rs  lib.rs  part_graph.rs  relationships.rs  run_split.rs  runs.rs  tables.rs
docli/docli-patch/src/ops/: finalize.rs  find_replace.rs  insert.rs
docli/docli-query/: Cargo.toml
docli/docli-query/src/: heading.rs  selector.rs  story.rs
docli/docli-render/src/: lib.rs  markdown.rs  pandoc.rs
docli/docli-schema/: Cargo.toml
docli/docli-schema/src/: lib.rs
tests/fixtures/: minimal.docx
