[package]
name = "docli-create"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
docli-core = { path = "../docli-core" }
docli-kb = { path = "../docli-kb" }
docx-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
